Update Weak 4 Assignment 2.2
Assignment 2.2

--- a/Weak 4 Assignment 2.2
+++ b/Weak 4 Assignment 2.2
@@ -1,4 +1,9 @@
-# The code below almost works
+Write a program to prompt the user for hours and rate per hour using input to compute gross pay. Use 35 hours and a rate of 2.75 per hour to test the program (the pay should be 96.25). You should use input to read a string and float() to convert the string to a number. Do not worry about error checking or bad user data.
 
-name = input("Enter your name")
-print("Hello",name)
+
+
+hours = input("Enter Hours:")
+rate = input("Enter rate:")
+Pay = float(hours) * float(rate )
+print("Pay:",Pay)
+
