--- a/Weak 6 Assignment 4.6
+++ b/Weak 6 Assignment 4.6
@@ -5,6 +5,8 @@
  You should use input to read a string and float() to convert the string to a number. Do not worry about error checking the user input unless you want to - you can assume the user types numbers properly.
  Do not name your variable sum or use the sum() function.
  
+ SOLUTION
+ 
  def computepay(hours,rate):
  if hours>40.0:
   p = rate * 40.0
